# dagzoo

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  WORKFLOW.md  pyproject.toml
.github/workflows/: benchmark.yml  docs.yml  package.yml  test.yml
benchmarks/baselines/: cpu_smoke.json  cpu_standard.json
configs/: AGENTS.md  benchmark_cpu.yaml  benchmark_cuda_bf16.yaml  benchmark_cuda_desktop.yaml  benchmark_cuda_h100.yaml  benchmark_medium_cuda.yaml  curriculum_tabiclv2.yaml  default.yaml  preset_cuda_h100.yaml  preset_diagnostics_on.yaml  preset_filter_benchmark_smoke.yaml  preset_lineage_benchmark_smoke.yaml  preset_many_class_benchmark_smoke.yaml  preset_many_class_generate_smoke.yaml  preset_mechanism_baseline_benchmark_smoke.yaml  preset_mechanism_piecewise_benchmark_smoke.yaml  preset_mechanism_piecewise_filter_smoke.yaml  preset_mechanism_piecewise_generate_smoke.yaml  preset_missingness_mar.yaml  preset_missingness_mcar.yaml  preset_missingness_mnar.yaml  preset_noise_benchmark_smoke.yaml  preset_noise_gaussian_generate_smoke.yaml  preset_noise_laplace_generate_smoke.yaml  preset_noise_mixture_generate_smoke.yaml  preset_noise_student_t_generate_smoke.yaml  preset_shift_benchmark_smoke.yaml  preset_shift_graph_drift_generate_smoke.yaml  preset_shift_mechanism_drift_generate_smoke.yaml  preset_shift_mixed_generate_smoke.yaml  preset_shift_noise_drift_generate_smoke.yaml  preset_steering_conservative.yaml
docs/: architecture.md  backlog_decision_rules.md  canonical.css  config-resolution.md  design-decisions.md  glossary.md  how-it-works.html  how-it-works.md  implementation.md  improvement_ideas.md  literature_evidence_2026.md  output-format.md  request-file-contract.md  roadmap.md  transforms.html  transforms.md  usage-guide.md
docs/development/: backlog_decision_rules.md  codebase-navigation.md  config-resolution.md  design-decisions.md  effective-diversity-audit.md  harness_audit.md  issue_authoring.md  keyed-rng.md  module-dependency-map.md  request-file-contract.md  roadmap.md  symphony.md  transforms.md
docs/features/: benchmark-guardrails.md  curriculum.md  diagnostics.md  many-class.md  mechanism-diversity.md  missingness.md  noise.md  shift.md  steering.md
reference/: ADDITIONAL_PAPERS.md  PAPERS.md  linear_issue_map_2026-03-08.json  literature_evidence_2026.md
scripts/: README.md  benchmark-smoke.sh  benchmark-suite.sh  bump-version.sh  cleanup_local_artifacts.py  dev  dev.py  effective_diversity_audit.py  fetch-additional-references.sh  generate-curriculum.sh  generate-default.sh  generate-from-config.sh  generate-h100.sh  generate-many-class.sh  generate-missingness.sh  generate-noise.sh  generate-smoke.sh
scripts/devlib/: __init__.py  common.py  contract.py  deps.py  doctor.py  impact.py  review_policy.py  verify.py
scripts/docs/: check_built_output_links.py  check_links.py  check_repo_paths.py  sync_hugo_content.py
scripts/linear/: github_to_linear.py  seed_harness_backlog.py
site/: README.md  go.mod  hugo.yaml  package-lock.json  package.json
site/assets/scss/: _styles_project.scss  _variables_project.scss
site/content/: _index.md
site/content/docs/: _index.md
site/layouts/partials/: page-meta-links.html
src/: AGENTS.md
src/cauchy_generator/: AGENTS.md  __init__.py  cli.py  config.py  hardware.py  math_utils.py  meta_targets.py  rng.py
src/cauchy_generator/bench/: AGENTS.md  __init__.py  baseline.py  collectors.py  constants.py  guardrails.py  metrics.py  micro.py  report.py  suite.py  throughput.py
src/cauchy_generator/converters/: __init__.py  categorical.py  numeric.py
src/dagsynth/: cli.py  config.py  diagnostics_targets.py  hardware_policy.py
src/dagzoo/: __init__.py  cli.py  config.py  diagnostics_targets.py  hardware.py  hardware_policy.py  math_utils.py  rng.py  types.py
src/dagzoo/cli/: common.py  (+6 more)
tests/: AGENTS.md  conftest.py  test_activations.py  test_benchmark_cli.py  test_benchmark_regression.py  test_benchmark_stage_metrics.py  test_benchmark_suite.py  test_benchmark_throughput.py  test_categorical_converter.py  test_cauchy_graph.py  test_cleanup_local_artifacts.py  test_cli_contract.py  test_cli_outputs.py  test_cli_validation.py  test_config.py  test_config_resolution.py  test_corpus_probe.py  test_correlated.py  test_curriculum_shell.py  test_dag_sampler.py  test_deferred_filter.py  test_dev_tooling.py  test_diagnostics_coverage.py  test_diagnostics_metrics.py  test_diversity_audit_cli.py  test_docs_scripts.py  test_effective_diversity_audit.py  test_execution_semantics.py  test_extra_trees_filter.py  test_filter_calibration.py  test_filtering_availability.py  test_fixed_layout_batched.py  test_generate.py  test_generate_handoff.py  test_github_to_linear.py  test_hardware.py  test_lineage_artifact.py  test_lineage_schema.py  test_mechanism_config.py  test_metrics_torch.py  (+29 more)
(+177 files in other folders)
