[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dagzoo"
version = "0.5.4"
description = "High-performance synthetic tabular data generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.1",
  "torch>=2.8",
  "pyyaml>=6.0",
  "pyarrow>=23.0",
  "scikit-learn>=1.8.0",
]

[project.scripts]
dagzoo = "dagzoo.cli:main"

[dependency-groups]
dev = [
  "mdformat>=0.7",
  "mdformat-gfm>=0.4",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.6",
  "types-PyYAML",
  "vulture>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagzoo"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.coverage.run]
source = ["dagzoo"]
omit = [
  "src/dagzoo/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
