[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dagzoo"
version = "0.9.11"
description = "Synthetic tabular data generator for causal modeling"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Benson Lee" },
]
license = "MIT"
requires-python = ">=3.13"
keywords = [
  "synthetic data generation",
  "structural causal models",
  "causal modeling",
  "synthetic data",
  "tabular data",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "numpy>=2.1",
  "torch>=2.8",
  "pyyaml>=6.0",
  "pyarrow>=23.0",
  "scikit-learn>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/bensonlee5/dagzoo"
Documentation = "https://bensonlee5.github.io/dagzoo/docs/"
Repository = "https://github.com/bensonlee5/dagzoo"
Issues = "https://github.com/bensonlee5/dagzoo/issues"
Changelog = "https://github.com/bensonlee5/dagzoo/blob/main/CHANGELOG.md"

[project.scripts]
dagzoo = "dagzoo.cli:main"

[dependency-groups]
dev = [
  "deptry>=0.23",
  "import-linter>=2.3",
  "mdformat>=0.7",
  "mdformat-gfm>=0.4",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "pytest-testmon>=2.1",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "types-PyYAML",
  "vulture>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagzoo"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.coverage.run]
source = ["dagzoo"]
omit = [
  "src/dagzoo/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true

[tool.deptry]
known_first_party = ["dagzoo"]
extend_exclude = [
  "^tests/",
  "^scripts/",
  "^docs/",
  "^site/",
]
